// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="wrapper"
  onChange={undefined}
>
  <input
    autoComplete={undefined}
    autoFocus={undefined}
    className="control"
    disabled={undefined}
    id={undefined}
    maxLength={undefined}
    name="control"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    placeholder={undefined}
    readOnly={undefined}
    type="text"
    value=""
  />
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="wrapper outer"
  onChange={undefined}
>
  <input
    autoComplete="off"
    autoFocus={true}
    className="control"
    disabled={true}
    id="controls-id"
    maxLength="255"
    name="control"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    placeholder="__"
    readOnly={true}
    type="password"
    value=""
  />
</span>
`;
